src/app/sega/chunithm/v2/v2-songlist/v2-songlist.component.css
input[type=checkbox] {
  width: 0;
  height: 0;
  border: 0;
  visibility: hidden;
}

.checkbox-label{
  text-wrap: nowrap;
  user-select: none;
  border: var(--bs-border-width) solid var(--bs-border-color);
  border-radius: var(--bs-border-radius);
  color: var(--bs-link-color);
  background-color: var(--bs-body-bg);
  padding: 0.25rem 0.5rem;
  font-size: .875rem;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}


input[type=checkbox] + .checkbox-label:hover{
  color: var(--bs-link-hover-color);
  background-color: var(--bs-tertiary-bg);
}

input[type=checkbox]:checked + .checkbox-label{
  color: var(--bs-light);
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

.input-container:focus-within{
  color: var(--bs-body-color);
  background-color: var(--bs-body-bg);
  border-color: #86b7fe;
  outline: 0;
  box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
}

table {
  width: 100%;
}

.song-info {
  padding: 4px;
}

.song-info .jacket-container {
  width: 6.4rem;
  min-width: 6.4rem;
  aspect-ratio: 1;
}

.song-info .song-info-id {
  font-size: 20px;
}

.song-info .song-info-title {
  font-size: 16px;
}

.song-info .song-info-artist {
  font-size: 12px;
}

.difficulty {
  font-size: 12px;
}

.difficulty-basic {
  background: #00ab84;
  border: 1px solid #145830;
  color: white;
}

.difficulty-advanced {
  background: #ff7e00;
  border: 1px solid #995014;
  color: white;
}

.difficulty-expert {
  background: #f12929;
  border: 1px solid #7B1F18;
  color: white;
}

.difficulty-master {
  background: #8e1be5;
  border: 1px solid #381C47;
  color: white;
}

.difficulty-ultima {
  background: #424242;
  border: 1px solid #ff2854;
  color: white;
}

.color-we {
  background: linear-gradient(45deg, #0BE9EE, #ACE559, #FCE116, #CB00B0);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-weight: bold;
  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.1);
}

.difficulty-we {
  background: #343636;
  border: 1px solid var(--bs-secondary);
}

